--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a student in a coding bootcamp.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Chicago, IL</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Painting</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>still a working progress</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>USA </p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To learn the mysteries of the internet</p>
     </section>
 
     <footer id="footer">
